--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,28 @@
-<%- include("templates/encabezado") %>
+<%- include("templates/encabezado2") %>
+    <div id="logo" class="logo">
+        <img src="/web/imagenes/Logo2.png">
+    </div>
+    <section class="log">
+        <div id="login" class="login">
+            <form action="/revisar" method="post">
+                <div>
+                    <img src="/web/imagenes/perfil.jpg" width="200px">
+                </div>
+                <div id="usu">
+                    <label>Usuario</label>
+                    <br>
+                    <input type="text" name="usuario" id="usuario" autofocus>
+                </div>
+                <div id="pass">
+                    <label>Password</label>
+                    <br>
+                    <input type="password" name="password" id="password" >
+                </div>
+                <div id="butt">
+                    <button type="submit" id="button">Iniciar sesion</button>
+                </div>
+            </form>
 
-<div class="img">
-</div>
-
-<div class="container">
-<div class="login-box">
-  <h2>Login</h2>
-  <form action="/revisar" method="post" id="formulario">
-    <div class="form-group">
-      <label for="username">Numero de expediente:</label>
-      <input type="text" id="username" name="username" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <div class="form-group checkbox">
-      <input type="checkbox" id="remember" name="remember">
-      <label for="remember">Remember me</label>
-    </div>
-    <button type="submit">Log In</button>
-  </form>
-</div>
-</div>
+        </div>    
+    </section>
 <%- include("templates/pie") %>
