--- a/views/templates/encabezado2.ejs
+++ b/views/templates/encabezado2.ejs
@@ -5,5 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva y Prestamo</title>
     <link rel="stylesheet" href="/web/css/estilos2.css">
+    <script src="/web/js/script.js" defer></script>
 </head>
 <body>
