--- a/web/css/estilos2.css
+++ b/web/css/estilos2.css
@@ -18,22 +18,22 @@ body{
 }
 
 .login{
-    /*background-color: white;*/
-    width: 500px;
-    height: 400px;
+    margin-top: 70px;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
-.log{
-    margin: 100px;
+input{
+    border-radius: 10px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 200px;
+    height: 20px; 
 }
 
-#usuario{
+/*#usuario{
     border-radius: 10px;
     width: 200px;
     height: 30px;
@@ -43,11 +43,42 @@ body{
     border-radius: 10px;
     width: 200px;
     height: 30px;
+}*/
+
+button{
+    margin-top: 15px;
+    border-radius: 6px;
+    width: 206px;
+    height: 25px;
 }
 
-#button{
+/*#button{
     margin-top: 15px;
     border-radius: 6px;
     width: 206px;
     height: 25px; 
+}
+
+#buttonReg{
+    margin-top: 15px;
+    border-radius: 6px;
+    width: 206px;
+    height: 25px;
+}*/
+
+.forma{
+    margin-top: 70px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.error{
+    color: red;
+}
+
+.errorInput{
+    border-color: red;
 }
