--- a/views/templates/encabezado.ejs
+++ b/views/templates/encabezado.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,3 +8,4 @@
     <script src="/web/js/script.js" defer></script>
 </head>
 <body>
+    
